Autocomplete working & updating UI

--- a/src/ui/TextForm.scss
+++ b/src/ui/TextForm.scss
@@ -12,7 +12,7 @@ $block: 'text-form';
 
   &__input {
     padding: 0.35rem;
-    margin: 1rem 0;
+    // margin: 1rem 0;
     border: 1px solid #d0d0d0;
   }
 
