--- a/src/ui/AutoDropdown.scss
+++ b/src/ui/AutoDropdown.scss
@@ -18,6 +18,7 @@ $block: "auto-dropdown";
       border: 1px solid rgb(221, 210, 210);
       background: #fafafa;
       padding: 0.5rem 1rem;
+      cursor: pointer;
       &:hover {
         background: lighten(#fafafa, 50%);
       }
